--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -1,4 +1,4 @@
-name: main CI/CD pipeline
+name: DevSecOps Pipeline
 
 on:
   push:
@@ -6,10 +6,117 @@ on:
     paths-ignore:
       - '**/*.md'
       - '**/*.txt'
-    workflow_dispatch: 
+  pull_request:
+    branches: ["main"]
+    paths-ignore:
+      - '**/*.md'
+      - '**/*.txt'
+  workflow_dispatch:
 
-  jobs:
-    build: 
-      name: Build
-      uses: ./.github/workflows/build.yml
-      secrets: inherit 
+permissions:
+  contents: read
+
+jobs:
+
+  # ── Stage 1: Build & Test ──────────────────────────────────────────
+  build:
+    name: Build & Test
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
+
+  # ── Stage 2: Security Checks ───────────────────────────────────────
+
+  # SAST – CodeQL static analysis for Java
+  codeql-sast:
+    name: "SAST (CodeQL)"
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 25
+        uses: actions/setup-java@v4
+        with:
+          java-version: '25'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: java
+
+      - name: Build for CodeQL
+        run: chmod +x mvnw && ./mvnw package -DskipTests --batch-mode --no-transfer-progress
+
+      - name: Perform CodeQL analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:java"
+
+  # SCA – Dependency Review (runs only on pull requests)
+  dependency-review:
+    name: "SCA (Dependency Review)"
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4
+        with:
+          fail-on-severity: high
+          comment-summary-in-pr: always
+
+  # Secret Scanning – Gitleaks
+  gitleaks:
+    name: "Secret Scanning (Gitleaks)"
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # Vulnerability & Misconfiguration Scanning – Trivy
+  trivy-scan:
+    name: "Vulnerability Scan (Trivy)"
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Trivy filesystem scan
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+
+      - name: Upload Trivy SARIF to GitHub Security
+        if: always()
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results.sarif'
+          category: 'trivy'
