--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -26,6 +26,13 @@ jobs:
 
   # ── Stage 2: Security Checks ───────────────────────────────────────
 
+  # SCA 
+
+  sca:
+    needs: build
+    uses: ./.github/workflows/sca.yml
+    secrets: inherit
+
   # SAST – CodeQL static analysis for Java
   codeql-sast:
     name: "SAST (CodeQL)"
@@ -57,24 +64,6 @@ jobs:
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:java"
-
-  # SCA – Dependency Review (runs only on pull requests)
-  dependency-review:
-    name: "SCA (Dependency Review)"
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Dependency Review
-        uses: actions/dependency-review-action@v4
-        with:
-          fail-on-severity: high
-          comment-summary-in-pr: always
 
   # Secret Scanning – Gitleaks
   gitleaks:
