--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   sca_scan:
     name: Snyk Dependency Scan
-      runs-on: ubuntu:latest
+      runs-on: ubuntu-latest
 
       steps:
       - name: Checkout code
