--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -31,6 +31,8 @@ jobs:
   sca:
     needs: build
     uses: ./.github/workflows/sca.yml
+    permissions:
+      security-events: write
     secrets: inherit
 
   # SAST – CodeQL static analysis for Java
