--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -14,15 +14,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/setup@v3
-
-      - name: Authenticate Snyk
-        run: snyk auth $SNYK_TOKEN
+        uses: snyk/actions/maven@master
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-
-      - name: Run Snyk test and output SARIF
-        run: snyk test --severity-threshold=high --sarif-file-output=snyk.sarif
+        with:
+          args: --severity-threshold=high --sarif-file-output=snyk.sarif
 
       - name: Upload Snyk results to GitHub Code Scanning
         if: always()
