--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=high 
+          args: --sarif-file-output=snyk.sarif 
 
       - name: Upload Snyk results to GitHub Code Scanning
         if: always()
