--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -13,6 +13,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up JDK 25
+        uses: actions/setup-java@v4
+        with:
+          java-version: '25'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Grant execute permission to Maven wrapper
+        run: chmod +x mvnw
+
+      - name: Build
+        run: ./mvnw package -DskipTests --batch-mode
+
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/maven@master
         continue-on-error: true
