--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -20,19 +20,16 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Grant execute permission to Maven wrapper
-        run: chmod +x mvnw
-
-      - name: Build
-        run: ./mvnw package -DskipTests --batch-mode
-
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/maven@master
+        uses: snyk/actions/setup@master
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --sarif-file-output=snyk.sarif 
+        run: |
+          # Ensure the Maven wrapper has execution permissions
+          chmod +x mvnw
+          # Run the scan using the environment's Java and Maven
+          snyk test --sarif-file-output=snyk.sarif --severity-threshold=high 
 
       - name: Upload Snyk results to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v4
