--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -32,6 +32,7 @@ jobs:
             snyk test --sarif --severity-threshold=high 
 
       - name: Upload Snyk results to GitHub Code Scanning
+        if: always()
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: snyk.sarif
