--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -20,19 +20,19 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Run Snyk to check for vulnerabilities
+      - name: Set up Snyk CLI
         uses: snyk/actions/setup@master
+
+      - name: Run Snyk to check for vulnerabilities
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-          run: |
-            # Ensure the Maven wrapper has execution permissions
-            chmod +x mvnw
-            # Run the scan using the environment's Java and Maven
-            snyk test --sarif --severity-threshold=high 
+        run: |
+          chmod +x mvnw
+          snyk test --sarif-file-output=snyk.sarif --severity-threshold=high
 
       - name: Upload Snyk results to GitHub Code Scanning
         if: always()
-        uses: github/codeql-action/upload-sarif@v4
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk.sarif
