--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -35,6 +35,14 @@ jobs:
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:java"
+          output: codeql-results
+
+      - name: Upload CodeQL SARIF
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: codeql-sarif
+          path: codeql-results/*.sarif
 
   semgrep:
     name: Semgrep
@@ -52,12 +60,19 @@ jobs:
       - name: Run Semgrep scan
         run: semgrep scan --config auto --sarif --output semgrep-results.sarif
 
-      - name: Upload Semgrep SARIF
+      - name: Upload Semgrep SARIF to GitHub Security
         if: always()
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep-results.sarif
           category: 'semgrep'
+
+      - name: Upload Semgrep SARIF
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: semgrep-sarif
+          path: semgrep-results.sarif
 
   spotbugs:
     name: SpotBugs + FindSecBugs
