--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -36,3 +36,10 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk.sarif
+
+      - name: Upload Snyk SARIF
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: snyk-sarif
+          path: snyk.sarif
